# Copyright (C) 2005-2011 MaNGOS <http://getmangos.com/>
# Copyright (C) 2009-2011 MaNGOSZero <https://github.com/mangos/zero>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

set (game_SRCS 
	AdvancedPlayerBotAI.h
	AdvancedPlayerBotAI.cpp
	AccountMgr.cpp
	AutoBroadCastMgr.cpp
	Camera.cpp
	CreatureGroups.cpp
	GameEventMgr.cpp
	GMTicketMgr.cpp
	GossipDef.cpp
	HardcodedEvents.cpp
	HonorMgr.cpp
	ItemEnchantmentMgr.cpp
	LootMgr.cpp
	ObjectAccessor.cpp
	ObjectGridLoader.cpp
	ObjectGuid.cpp
	ObjectMgr.cpp
	ObjectPosSelector.cpp
	pchdef.cpp
	PlayerDump.cpp
	QuestDef.cpp
	ReputationMgr.cpp
	ScriptMgr.cpp
	SkillDiscovery.cpp
	SkillExtraItems.cpp
	SocialMgr.cpp
	StatSystem.cpp
	UnitAuraProcHandler.cpp
	Weather.cpp
	World.cpp
	WorldSession.cpp
AuctionHouseBot/AhBot.cpp
AuctionHouseBot/AhBot.h
AuctionHouseBot/AhBotConfig.cpp
AuctionHouseBot/AhBotConfig.h
AuctionHouseBot/Category.cpp
AuctionHouseBot/Category.h
AuctionHouseBot/ConsumableCategory.cpp
AuctionHouseBot/ConsumableCategory.h
AuctionHouseBot/ItemBag.cpp
AuctionHouseBot/ItemBag.h
AuctionHouseBot/PricingStrategy.cpp
AuctionHouseBot/PricingStrategy.h
AuctionHouseBot/TradeCategory.cpp
AuctionHouseBot/TradeCategory.h
	AI/AggressorAI.cpp
	AI/CreatureAI.cpp
	AI/CreatureAIRegistry.cpp
	AI/CreatureAISelector.cpp
	AI/CreatureEventAI.cpp
	AI/CreatureEventAIMgr.cpp
	AI/GenericSpellAI.cpp
	AI/GuardAI.cpp
	AI/NullCreatureAI.cpp
	AI/PetAI.cpp
	AI/PlayerAI.cpp
	AI/ReactorAI.cpp
	AI/ScriptedAI.cpp
	AI/ScriptedEscortAI.cpp
	AI/ScriptedFollowerAI.cpp
	AI/ScriptedGuardAI.cpp
	AI/ScriptedInstance.cpp
	AI/ScriptedPetAI.cpp
	AI/TotemAI.cpp
	Anticheat/Anticheat.cpp
      Anticheat/libanticheat.cpp
      Anticheat/libanticheat.h
      Anticheat/Antispam/Antispam.cpp
      Anticheat/Antispam/Antispam.h
      Anticheat/MovementAnticheat/Cheat.cpp
      Anticheat/MovementAnticheat/Cheat.h
      Anticheat/WardenAnticheat/Warden.cpp
      Anticheat/WardenAnticheat/Warden.h
      Anticheat/WardenAnticheat/WardenMac.cpp
      Anticheat/WardenAnticheat/WardenMac.h
      Anticheat/WardenAnticheat/WardenWin.cpp
      Anticheat/WardenAnticheat/WardenWin.h
      Anticheat/WardenAnticheat/WardenStorageMgr.cpp
      Anticheat/WardenAnticheat/WardenStorageMgr.h
      Anticheat/WardenAnticheat/WardenModuleMac.h
      Anticheat/WardenAnticheat/WardenModuleWin.h
      Anticheat/WardenAnticheat/WardenKeyGeneration.h
	AuctionHouse/AuctionHouseBotMgr.cpp
	AuctionHouse/AuctionHouseMgr.cpp
	AutoTesting/AutoTestingMgr.cpp
	AutoTesting/TestLoader.cpp
	AutoTesting/Tests/AurasStack.cpp
	AutoTesting/Tests/ChanneledSpells.cpp
	AutoTesting/Tests/Cinematics.cpp
	AutoTesting/Tests/ControlSpells.cpp
	AutoTesting/Tests/Generic.cpp
	AutoTesting/Tests/Mage.cpp
	AutoTesting/Tests/PacketBroadcaster.cpp
	AutoTesting/Tests/Shaman.cpp
	AutoTesting/Tests/Test.cpp
	AutoTesting/Tests/Warlock.cpp
	Battlegrounds/BattleGround.cpp
	Battlegrounds/BattleGroundAB.cpp
	Battlegrounds/BattleGroundAV.cpp
	Battlegrounds/BattleGroundMgr.cpp
	Battlegrounds/BattleGroundWS.cpp
	Chat/Channel.cpp
	Chat/ChannelMgr.cpp
	Chat/Chat.cpp
	CinematicStuff/CinematicStuff.cpp
	CinematicStuff/CinematicStuff.h
	Commands/debugcmds.cpp
	Commands/GMTicketCommands.cpp
	Commands/Level0.cpp
	Commands/Level1.cpp
	Commands/Level2.cpp
	Commands/Level3.cpp
	Commands/Nostalrius.cpp
	Database/CharacterDatabaseCache.cpp
	Database/CharacterDatabaseCleaner.cpp
	Database/DBCStores.cpp
	Database/SQLStorages.cpp
	Group/Group.cpp
	Group/GroupReference.cpp
	Guild/Guild.cpp
	Guild/GuildMgr.cpp
	Handlers/AddonHandler.cpp
	Handlers/AuctionHouseHandler.cpp
	Handlers/BattleGroundHandler.cpp
	Handlers/ChannelHandler.cpp
	Handlers/CharacterHandler.cpp
	Handlers/ChatHandler.cpp
	Handlers/CombatHandler.cpp
	Handlers/DuelHandler.cpp
	Handlers/GMTicketHandler.cpp
	Handlers/GroupHandler.cpp
	Handlers/GuildHandler.cpp
	Handlers/ItemHandler.cpp
	Handlers/LootHandler.cpp
	Handlers/MailHandler.cpp
	Handlers/MiscHandler.cpp
	Handlers/MovementHandler.cpp
	Handlers/NPCHandler.cpp
	Handlers/PetHandler.cpp
	Handlers/PetitionsHandler.cpp
	Handlers/QueryHandler.cpp
	Handlers/QuestHandler.cpp
	Handlers/SkillHandler.cpp
	Handlers/SpellHandler.cpp
	Handlers/TaxiHandler.cpp
	Handlers/TradeHandler.cpp
	Lua/BattleGroundHooks.cpp
	Lua/CreatureHooks.cpp
	Lua/ElunaEventMgr.cpp
	Lua/ElunaInstanceAI.cpp
	Lua/ElunaUtility.cpp
	Lua/GameObjectHooks.cpp
	Lua/GossipHooks.cpp
	Lua/GroupHooks.cpp
	Lua/GuildHooks.cpp
	Lua/InstanceHooks.cpp
	Lua/ItemHooks.cpp
	Lua/lmarshal.cpp
	Lua/LuaEngine.cpp
	Lua/LuaFunctions.cpp
	Lua/PacketHooks.cpp
	Lua/PlayerHooks.cpp
	Lua/ServerHooks.cpp
	Lua/VehicleHooks.cpp
	Mail/Mail.cpp
	Mail/MassMailMgr.cpp
	MapNodes/AbstractPlayer.cpp
	MapNodes/GMCommands.cpp
	MapNodes/MapSocket.cpp
	MapNodes/MapSocketMgr.cpp
	MapNodes/MasterPlayer.cpp
	MapNodes/MasterPlayerChat.cpp
	MapNodes/NodeSession.cpp
	MapNodes/NodesMgr.cpp
	MapNodes/NodesOpcodes.cpp
	MapNodes/Handlers/GuidsSynchronization.cpp
	MapNodes/Handlers/Protocol.cpp
	MapNodes/Handlers/SessionTransfert.cpp
	MapNodes/Serializers/ItemSerializer.cpp
	MapNodes/Serializers/PlayerSerializer.cpp
	Maps/GridMap.cpp
	Maps/GridNotifiers.cpp
	Maps/GridSearchers.cpp
	Maps/GridStates.cpp
	Maps/InstanceData.cpp
	Maps/Map.cpp
	Maps/MapManager.cpp
	Maps/MapPersistentStateMgr.cpp
	Maps/MoveMap.cpp
	Maps/PathFinder.cpp
	Maps/ZoneScript.cpp
	Maps/ZoneScriptMgr.cpp
	Maps/Pool/PoolManager.cpp
	Movement/ConfusedMovementGenerator.cpp
	Movement/FearMovementGenerator.cpp
	Movement/FleeingMovementGenerator.cpp
	Movement/FollowerReference.cpp
	Movement/HomeMovementGenerator.cpp
	Movement/IdleMovementGenerator.cpp
	Movement/MotionMaster.cpp
	Movement/MovementGenerator.cpp
	Movement/PointMovementGenerator.cpp
	Movement/RandomMovementGenerator.cpp
	Movement/TargetedMovementGenerator.cpp
	Movement/WaypointManager.cpp
	Movement/WaypointMovementGenerator.cpp
	Movement/spline/MoveSpline.cpp
	Movement/spline/MoveSplineInit.cpp
	Movement/spline/packet_builder.cpp
	Movement/spline/spline.cpp
	Movement/spline/util.cpp
	Objects/Bag.cpp
	Objects/Corpse.cpp
	Objects/Creature.cpp
	Objects/DynamicObject.cpp
	Objects/GameObject.cpp
	Objects/Item.cpp
	Objects/Object.cpp
	Objects/Pet.cpp
	Objects/Player.cpp
	Objects/TemporarySummon.cpp
	Objects/Totem.cpp
	Objects/Unit.cpp
	Objects/UpdateData.cpp
	OutdoorPvP/OutdoorPvPEP.cpp
	OutdoorPvP/OutdoorPvPSI.cpp
	OutdoorPvP/Register.cpp
	PacketBroadcast/ChatCommands.cpp
	PacketBroadcast/MovementBroadcaster.cpp
	PacketBroadcast/PlayerBroadcaster.cpp
	PlayerBots/PlayerBotAI.cpp
	PlayerBots/PlayerBotMgr.cpp
	Protocol/Opcodes.cpp
	Protocol/WorldSocket.cpp
	Protocol/WorldSocketMgr.cpp
	Spells/Spell.cpp
	Spells/SpellAuras.cpp
	Spells/SpellEffects.cpp
	Spells/SpellEntry.cpp
	Spells/SpellMgr.cpp
	Spells/SpellModMgr.cpp
	Threat/HostileRefManager.cpp
	Threat/ThreatManager.cpp
	Transports/Transport.cpp
	Transports/TransportMgr.cpp
	vmap/BIH.cpp
	vmap/DynamicTree.cpp
	vmap/GameObjectModel.cpp
	vmap/MapTree.cpp
	vmap/ModelInstance.cpp
	vmap/TileAssembler.cpp
	vmap/VMapFactory.cpp
	vmap/VMapManager2.cpp
	vmap/WorldModel.cpp
	AccountMgr.h
	AutoBroadCastMgr.h
	Camera.h
	CreatureGroups.h
	Formulas.h
	GameEventMgr.h
	GMTicketMgr.h
	GossipDef.h
	HardcodedEvents.h
	HonorMgr.h
	ItemEnchantmentMgr.h
	Language.h
	LootMgr.h
	ObjectAccessor.h
	ObjectGridLoader.h
	ObjectGuid.h
	ObjectMgr.h
	ObjectPosSelector.h
	pchdef.h
	PlayerDump.h
	QuestDef.h
	ReputationMgr.h
	ScriptedGossip.h
	ScriptMgr.h
	SharedDefines.h
	SkillDiscovery.h
	SkillExtraItems.h
	SocialMgr.h
	UnitEvents.h
	Weather.h
	World.h
	WorldSession.h
	AI/AggressorAI.h
	AI/CreatureAI.h
	AI/CreatureAIImpl.h
	AI/CreatureAIRegistry.h
	AI/CreatureAISelector.h
	AI/CreatureEventAI.h
	AI/CreatureEventAIMgr.h
	AI/GameObjectAI.h
	AI/GuardAI.h
	AI/NullCreatureAI.h
	AI/PetAI.h
	AI/PlayerAI.h
	AI/ReactorAI.h
	AI/ScriptedAI.h
	AI/ScriptedEscortAI.h
	AI/ScriptedFollowerAI.h
	AI/ScriptedGameObject.h
	AI/ScriptedGossip.h
	AI/ScriptedGuardAI.h
	AI/ScriptedInstance.h
	AI/ScriptedPetAI.h
	AI/TotemAI.h
	Anticheat/Anticheat.h
	AuctionHouse/AuctionHouseBotMgr.h
	AuctionHouse/AuctionHouseMgr.h
	AutoTesting/AutoTestingMgr.h
	AutoTesting/Tests/TestPCH.h
	Battlegrounds/BattleGround.h
	Battlegrounds/BattleGroundAB.h
	Battlegrounds/BattleGroundAV.h
	Battlegrounds/BattleGroundMgr.h
	Battlegrounds/BattleGroundWS.h
	Chat/Channel.h
	Chat/ChannelMgr.h
	Chat/Chat.h
	Commands/Nostalrius.h
	Database/CharacterDatabaseCache.h
	Database/CharacterDatabaseCleaner.h
	Database/DBCEnums.h
	Database/DBCfmt.h
	Database/DBCStores.h
	Database/DBCStructure.h
	Database/SQLStorages.h
	Group/Group.h
	Group/GroupReference.h
	Group/GroupRefManager.h
	Guild/Guild.h
	Guild/GuildMgr.h
	Handlers/AddonHandler.h
	Handlers/NPCHandler.h
    Lua/AuraMethods.h
	Lua/BattleGroundMethods.h
	Lua/BindingMap.h
	Lua/CorpseMethods.h
	Lua/CreatureMethods.h
	Lua/ElunaCreatureAI.h
	Lua/ElunaEventMgr.h
	Lua/ElunaIncludes.h
	Lua/ElunaInstanceAI.h
	Lua/ElunaQueryMethods.h
	Lua/ElunaTemplate.h
	Lua/ElunaUtility.h
	Lua/GameObjectMethods.h
	Lua/GlobalMethods.h
	Lua/GroupMethods.h
	Lua/GuildMethods.h
	Lua/HookHelpers.h
	Lua/Hooks.h
	Lua/ItemMethods.h
	Lua/lmarshal.h
	Lua/LuaEngine.h
	Lua/MapMethods.h
	Lua/ObjectMethods.h
	Lua/PlayerMethods.h
	Lua/QuestMethods.h
	Lua/SpellMethods.h
	Lua/UnitMethods.h
	Lua/VehicleMethods.h
	Lua/WorldObjectMethods.h
	Lua/WorldPacketMethods.h
	Mail/Mail.h
	Mail/MassMailMgr.h
	MapNodes/AbstractPlayer.h
	MapNodes/MapSocket.h
	MapNodes/MapSocketMgr.h
	MapNodes/MasterPlayer.h
	MapNodes/NodeSession.h
	MapNodes/NodesMgr.h
	MapNodes/NodesOpcodes.h
	MapNodes/Serializers/ItemSerializer.h
	MapNodes/Serializers/PlayerSerializer.h
	MapNodes/Serializers/Serializer.h
	Maps/Cell.h
	Maps/CellImpl.h
	Maps/GridDefines.h
	Maps/GridMap.h
	Maps/GridNotifiers.h
	Maps/GridNotifiersImpl.h
	Maps/GridSearchers.h
	Maps/GridStates.h
	Maps/InstanceData.h
	Maps/Map.h
	Maps/MapManager.h
	Maps/MapPersistentStateMgr.h
	Maps/MapReference.h
	Maps/MapReferenceImpl.h
	Maps/MapRefManager.h
	Maps/MoveMap.h
	Maps/MoveMapSharedDefines.h
	Maps/Path.h
	Maps/PathFinder.h
	Maps/ZoneScript.h
	Maps/ZoneScriptMgr.h
	Maps/Pool/PoolManager.h
	Movement/ConfusedMovementGenerator.h
	Movement/FearMovementGenerator.h
	Movement/FleeingMovementGenerator.h
	Movement/FollowerReference.h
	Movement/FollowerRefManager.h
	Movement/HomeMovementGenerator.h
	Movement/IdleMovementGenerator.h
	Movement/MotionMaster.h
	Movement/MovementGenerator.h
	Movement/MovementGeneratorImpl.h
	Movement/PointMovementGenerator.h
	Movement/RandomMovementGenerator.h
	Movement/TargetedMovementGenerator.h
	Movement/WaypointManager.h
	Movement/WaypointMovementGenerator.h
	Movement/spline/MoveSpline.h
	Movement/spline/MoveSplineFlag.h
	Movement/spline/MoveSplineInit.h
	Movement/spline/MoveSplineInitArgs.h
	Movement/spline/packet_builder.h
	Movement/spline/spline.h
	Movement/spline/spline.impl.h
	Movement/spline/typedefs.h
	Objects/Bag.h
	Objects/Corpse.h
	Objects/Creature.h
	Objects/DynamicObject.h
	Objects/GameObject.h
	Objects/Item.h
	Objects/ItemPrototype.h
	Objects/Object.h
	Objects/Pet.h
	Objects/Player.h
	Objects/TemporarySummon.h
	Objects/Totem.h
	Objects/Unit.h
	Objects/UpdateData.h
	Objects/UpdateFields.h
	Objects/UpdateMask.h
	OutdoorPvP/OutdoorPvPEP.h
	OutdoorPvP/OutdoorPvPSI.h
	PacketBroadcast/MovementBroadcaster.h
	PacketBroadcast/PlayerBroadcaster.h
PlayerBots/AiFactory.cpp
PlayerBots/AiFactory.h
PlayerBots/ChatFilter.cpp
PlayerBots/ChatFilter.h
PlayerBots/ChatHelper.cpp
PlayerBots/ChatHelper.h
PlayerBots/DisperseManager.cpp
PlayerBots/DisperseManager.h
PlayerBots/FleeManager.cpp
PlayerBots/FleeManager.h
PlayerBots/GuildTaskMgr.cpp
PlayerBots/GuildTaskMgr.h
PlayerBots/Helpers.cpp
PlayerBots/LazyCalculatedValue.h
PlayerBots/LootObjectStack.cpp
PlayerBots/LootObjectStack.h
PlayerBots/playerbot.h
PlayerBots/PlayerBotAI.cpp
PlayerBots/PlayerBotAI.h
PlayerBots/PlayerbotAIAware.h
PlayerBots/PlayerbotAIBase.cpp
PlayerBots/PlayerbotAIBase.h
PlayerBots/PlayerbotAIConfig.cpp
PlayerBots/PlayerbotAIConfig.h
PlayerBots/PlayerbotCommandServer.cpp
PlayerBots/PlayerbotCommandServer.h
PlayerBots/PlayerbotDbStore.cpp
PlayerBots/PlayerbotDbStore.h
PlayerBots/playerbotDefs.h
PlayerBots/PlayerbotFactory.cpp
PlayerBots/PlayerbotFactory.h
PlayerBots/PlayerBotMgr.cpp
PlayerBots/PlayerBotMgr.h
PlayerBots/PlayerbotSecurity.cpp
PlayerBots/PlayerbotSecurity.h
PlayerBots/RandomItemMgr.cpp
PlayerBots/RandomItemMgr.h
PlayerBots/RandomPlayerbotFactory.cpp
PlayerBots/RandomPlayerbotFactory.h
PlayerBots/RandomPlayerbotMgr.cpp
PlayerBots/RandomPlayerbotMgr.h
PlayerBots/strategy/Action.cpp
PlayerBots/strategy/Action.h
PlayerBots/strategy/ActionBasket.cpp
PlayerBots/strategy/ActionBasket.h
PlayerBots/strategy/AiObject.cpp
PlayerBots/strategy/AiObject.h
PlayerBots/strategy/AiObjectContext.cpp
PlayerBots/strategy/AiObjectContext.h
PlayerBots/strategy/CustomStrategy.cpp
PlayerBots/strategy/CustomStrategy.h
PlayerBots/strategy/Engine.cpp
PlayerBots/strategy/Engine.h
PlayerBots/strategy/Event.cpp
PlayerBots/strategy/Event.h
PlayerBots/strategy/ExternalEventHelper.h
PlayerBots/strategy/ItemVisitors.h
PlayerBots/strategy/Multiplier.cpp
PlayerBots/strategy/Multiplier.h
PlayerBots/strategy/NamedObjectContext.h
PlayerBots/strategy/PassiveMultiplier.cpp
PlayerBots/strategy/PassiveMultiplier.h
PlayerBots/strategy/Queue.cpp
PlayerBots/strategy/Queue.h
PlayerBots/strategy/Strategy.cpp
PlayerBots/strategy/Strategy.h
PlayerBots/strategy/StrategyContext.h
PlayerBots/strategy/Trigger.cpp
PlayerBots/strategy/Trigger.h
PlayerBots/strategy/Value.cpp
PlayerBots/strategy/Value.h
PlayerBots/strategy/actions/AcceptDuelAction.h
PlayerBots/strategy/actions/AcceptInvitationAction.h
PlayerBots/strategy/actions/AcceptQuestAction.cpp
PlayerBots/strategy/actions/AcceptQuestAction.h
PlayerBots/strategy/actions/AcceptResurrectAction.h
PlayerBots/strategy/actions/ActionContext.h
PlayerBots/strategy/actions/AddLootAction.cpp
PlayerBots/strategy/actions/AddLootAction.h
PlayerBots/strategy/actions/AreaTriggerAction.cpp
PlayerBots/strategy/actions/AreaTriggerAction.h
PlayerBots/strategy/actions/AttackAction.cpp
PlayerBots/strategy/actions/AttackAction.h
PlayerBots/strategy/actions/BankAction.cpp
PlayerBots/strategy/actions/BankAction.h
PlayerBots/strategy/actions/BuffAction.cpp
PlayerBots/strategy/actions/BuffAction.h
PlayerBots/strategy/actions/BuyAction.cpp
PlayerBots/strategy/actions/BuyAction.h
PlayerBots/strategy/actions/CastCustomSpellAction.cpp
PlayerBots/strategy/actions/CastCustomSpellAction.h
PlayerBots/strategy/actions/ChangeChatAction.cpp
PlayerBots/strategy/actions/ChangeChatAction.h
PlayerBots/strategy/actions/ChangeStrategyAction.cpp
PlayerBots/strategy/actions/ChangeStrategyAction.h
PlayerBots/strategy/actions/ChangeTalentsAction.cpp
PlayerBots/strategy/actions/ChangeTalentsAction.h
PlayerBots/strategy/actions/ChatActionContext.h
PlayerBots/strategy/actions/ChatShortcutActions.cpp
PlayerBots/strategy/actions/ChatShortcutActions.h
PlayerBots/strategy/actions/CheckMailAction.cpp
PlayerBots/strategy/actions/CheckMailAction.h
PlayerBots/strategy/actions/CheckMountStateAction.cpp
PlayerBots/strategy/actions/CheckMountStateAction.h
PlayerBots/strategy/actions/ChooseTargetActions.h
PlayerBots/strategy/actions/DelayAction.h
PlayerBots/strategy/actions/DestroyItemAction.cpp
PlayerBots/strategy/actions/DestroyItemAction.h
PlayerBots/strategy/actions/DropQuestAction.cpp
PlayerBots/strategy/actions/DropQuestAction.h
PlayerBots/strategy/actions/EmoteAction.cpp
PlayerBots/strategy/actions/EmoteAction.h
PlayerBots/strategy/actions/EquipAction.cpp
PlayerBots/strategy/actions/EquipAction.h
PlayerBots/strategy/actions/FollowActions.cpp
PlayerBots/strategy/actions/FollowActions.h
PlayerBots/strategy/actions/GenericActions.cpp
PlayerBots/strategy/actions/GenericActions.h
PlayerBots/strategy/actions/GenericSpellActions.cpp
PlayerBots/strategy/actions/GenericSpellActions.h
PlayerBots/strategy/actions/GoAction.cpp
PlayerBots/strategy/actions/GoAction.h
PlayerBots/strategy/actions/GossipHelloAction.cpp
PlayerBots/strategy/actions/GossipHelloAction.h
PlayerBots/strategy/actions/GuildAcceptAction.cpp
PlayerBots/strategy/actions/GuildAcceptAction.h
PlayerBots/strategy/actions/GuildBankAction.cpp
PlayerBots/strategy/actions/GuildBankAction.h
PlayerBots/strategy/actions/HelpAction.cpp
PlayerBots/strategy/actions/HelpAction.h
PlayerBots/strategy/actions/InventoryAction.cpp
PlayerBots/strategy/actions/InventoryAction.h
PlayerBots/strategy/actions/InventoryChangeFailureAction.cpp
PlayerBots/strategy/actions/InventoryChangeFailureAction.h
PlayerBots/strategy/actions/InviteToGroupAction.h
PlayerBots/strategy/actions/LeaveGroupAction.h
PlayerBots/strategy/actions/LfgActions.cpp
PlayerBots/strategy/actions/LfgActions.h
PlayerBots/strategy/actions/ListQuestsActions.cpp
PlayerBots/strategy/actions/ListQuestsActions.h
PlayerBots/strategy/actions/ListSpellsAction.cpp
PlayerBots/strategy/actions/ListSpellsAction.h
PlayerBots/strategy/actions/LogLevelAction.cpp
PlayerBots/strategy/actions/LogLevelAction.h
PlayerBots/strategy/actions/LootAction.cpp
PlayerBots/strategy/actions/LootAction.h
PlayerBots/strategy/actions/LootRollAction.cpp
PlayerBots/strategy/actions/LootRollAction.h
PlayerBots/strategy/actions/LootStrategyAction.cpp
PlayerBots/strategy/actions/LootStrategyAction.h
PlayerBots/strategy/actions/MailAction.cpp
PlayerBots/strategy/actions/MailAction.h
PlayerBots/strategy/actions/MoveBehindAction.cpp
PlayerBots/strategy/actions/MoveBehindAction.h
PlayerBots/strategy/actions/MovementActions.cpp
PlayerBots/strategy/actions/MovementActions.h
PlayerBots/strategy/actions/NonCombatActions.cpp
PlayerBots/strategy/actions/NonCombatActions.h
PlayerBots/strategy/actions/OutfitAction.cpp
PlayerBots/strategy/actions/OutfitAction.h
PlayerBots/strategy/actions/PassLeadershipToMasterAction.h
PlayerBots/strategy/actions/PositionAction.cpp
PlayerBots/strategy/actions/PositionAction.h
PlayerBots/strategy/actions/QueryItemUsageAction.cpp
PlayerBots/strategy/actions/QueryItemUsageAction.h
PlayerBots/strategy/actions/QueryQuestAction.cpp
PlayerBots/strategy/actions/QueryQuestAction.h
PlayerBots/strategy/actions/QuestAction.cpp
PlayerBots/strategy/actions/QuestAction.h
PlayerBots/strategy/actions/RandomBotUpdateAction.h
PlayerBots/strategy/actions/ReachTargetActions.h
PlayerBots/strategy/actions/ReadyCheckAction.cpp
PlayerBots/strategy/actions/ReadyCheckAction.h
PlayerBots/strategy/actions/ReleaseSpiritAction.h
PlayerBots/strategy/actions/RememberTaxiAction.cpp
PlayerBots/strategy/actions/RememberTaxiAction.h
PlayerBots/strategy/actions/RepairAllAction.cpp
PlayerBots/strategy/actions/RepairAllAction.h
PlayerBots/strategy/actions/ResetAiAction.cpp
PlayerBots/strategy/actions/ResetAiAction.h
PlayerBots/strategy/actions/RevealGatheringItemAction.cpp
PlayerBots/strategy/actions/RevealGatheringItemAction.h
PlayerBots/strategy/actions/ReviveFromCorpseAction.cpp
PlayerBots/strategy/actions/ReviveFromCorpseAction.h
PlayerBots/strategy/actions/RewardAction.cpp
PlayerBots/strategy/actions/RewardAction.h
PlayerBots/strategy/actions/RtiAction.h
PlayerBots/strategy/actions/SaveManaAction.cpp
PlayerBots/strategy/actions/SaveManaAction.h
PlayerBots/strategy/actions/SayAction.cpp
PlayerBots/strategy/actions/SayAction.h
PlayerBots/strategy/actions/SecurityCheckAction.cpp
PlayerBots/strategy/actions/SecurityCheckAction.h
PlayerBots/strategy/actions/SellAction.cpp
PlayerBots/strategy/actions/SellAction.h
PlayerBots/strategy/actions/SendMailAction.cpp
PlayerBots/strategy/actions/SendMailAction.h
PlayerBots/strategy/actions/SetHomeAction.cpp
PlayerBots/strategy/actions/SetHomeAction.h
PlayerBots/strategy/actions/SkipSpellsListAction.h
PlayerBots/strategy/actions/SkipSpellsListAction.cpp
PlayerBots/strategy/actions/StatsAction.cpp
PlayerBots/strategy/actions/StatsAction.h
PlayerBots/strategy/actions/StayActions.cpp
PlayerBots/strategy/actions/StayActions.h
PlayerBots/strategy/actions/SuggestWhatToDoAction.cpp
PlayerBots/strategy/actions/SuggestWhatToDoAction.h
PlayerBots/strategy/actions/TalkToQuestGiverAction.cpp
PlayerBots/strategy/actions/TalkToQuestGiverAction.h
PlayerBots/strategy/actions/TaxiAction.cpp
PlayerBots/strategy/actions/TaxiAction.h
PlayerBots/strategy/actions/TeleportAction.cpp
PlayerBots/strategy/actions/TeleportAction.h
PlayerBots/strategy/actions/TellCastFailedAction.cpp
PlayerBots/strategy/actions/TellCastFailedAction.h
PlayerBots/strategy/actions/TellItemCountAction.cpp
PlayerBots/strategy/actions/TellItemCountAction.h
PlayerBots/strategy/actions/TellLosAction.cpp
PlayerBots/strategy/actions/TellLosAction.h
PlayerBots/strategy/actions/TellMasterAction.h
PlayerBots/strategy/actions/TellReputationAction.cpp
PlayerBots/strategy/actions/TellReputationAction.h
PlayerBots/strategy/actions/TellTargetAction.cpp
PlayerBots/strategy/actions/TellTargetAction.h
PlayerBots/strategy/actions/TradeAction.cpp
PlayerBots/strategy/actions/TradeAction.h
PlayerBots/strategy/actions/TradeStatusAction.cpp
PlayerBots/strategy/actions/TradeStatusAction.h
PlayerBots/strategy/actions/TrainerAction.cpp
PlayerBots/strategy/actions/TrainerAction.h
PlayerBots/strategy/actions/UnequipAction.cpp
PlayerBots/strategy/actions/UnequipAction.h
PlayerBots/strategy/actions/UseConsumableAction.cpp
PlayerBots/strategy/actions/UseConsumableAction.h
PlayerBots/strategy/actions/UseItemAction.cpp
PlayerBots/strategy/actions/UseItemAction.h
PlayerBots/strategy/actions/UseMeetingStoneAction.cpp
PlayerBots/strategy/actions/UseMeetingStoneAction.h
PlayerBots/strategy/actions/WhoAction.cpp
PlayerBots/strategy/actions/WhoAction.h
PlayerBots/strategy/actions/WorldPacketActionContext.h
PlayerBots/strategy/druid/BearTankDruidStrategy.cpp
PlayerBots/strategy/druid/BearTankDruidStrategy.h
PlayerBots/strategy/druid/CasterDruidStrategy.cpp
PlayerBots/strategy/druid/CasterDruidStrategy.h
PlayerBots/strategy/druid/CatDpsDruidStrategy.cpp
PlayerBots/strategy/druid/CatDpsDruidStrategy.h
PlayerBots/strategy/druid/DruidActions.cpp
PlayerBots/strategy/druid/DruidActions.h
PlayerBots/strategy/druid/DruidAiObjectContext.cpp
PlayerBots/strategy/druid/DruidAiObjectContext.h
PlayerBots/strategy/druid/DruidBearActions.h
PlayerBots/strategy/druid/DruidCatActions.h
PlayerBots/strategy/druid/DruidMultipliers.cpp
PlayerBots/strategy/druid/DruidMultipliers.h
PlayerBots/strategy/druid/DruidShapeshiftActions.h
PlayerBots/strategy/druid/DruidTriggers.cpp
PlayerBots/strategy/druid/DruidTriggers.h
PlayerBots/strategy/druid/FeralDruidStrategy.cpp
PlayerBots/strategy/druid/FeralDruidStrategy.h
PlayerBots/strategy/druid/GenericDruidNonCombatStrategy.cpp
PlayerBots/strategy/druid/GenericDruidNonCombatStrategy.h
PlayerBots/strategy/druid/GenericDruidStrategy.cpp
PlayerBots/strategy/druid/GenericDruidStrategy.h
PlayerBots/strategy/druid/HealDruidStrategy.cpp
PlayerBots/strategy/druid/HealDruidStrategy.h
PlayerBots/strategy/generic/AttackEnemyPlayersStrategy.cpp
PlayerBots/strategy/generic/AttackEnemyPlayersStrategy.h
PlayerBots/strategy/generic/AttackRtiStrategy.cpp
PlayerBots/strategy/generic/AttackRtiStrategy.h
PlayerBots/strategy/generic/AttackWeakStrategy.cpp
PlayerBots/strategy/generic/AttackWeakStrategy.h
PlayerBots/strategy/generic/CastTimeStrategy.cpp
PlayerBots/strategy/generic/CastTimeStrategy.h
PlayerBots/strategy/generic/ChatCommandHandlerStrategy.cpp
PlayerBots/strategy/generic/ChatCommandHandlerStrategy.h
PlayerBots/strategy/generic/CombatStrategy.cpp
PlayerBots/strategy/generic/CombatStrategy.h
PlayerBots/strategy/generic/ConserveManaStrategy.cpp
PlayerBots/strategy/generic/ConserveManaStrategy.h
PlayerBots/strategy/generic/DeadStrategy.cpp
PlayerBots/strategy/generic/DeadStrategy.h
PlayerBots/strategy/generic/DisperseStrategy.cpp
PlayerBots/strategy/generic/DisperseStrategy.h
PlayerBots/strategy/generic/DpsAoeStrategy.cpp
PlayerBots/strategy/generic/DpsAoeStrategy.h
PlayerBots/strategy/generic/DpsAssistStrategy.cpp
PlayerBots/strategy/generic/DpsAssistStrategy.h
PlayerBots/strategy/generic/DuelStrategy.cpp
PlayerBots/strategy/generic/DuelStrategy.h
PlayerBots/strategy/generic/EmoteStrategy.cpp
PlayerBots/strategy/generic/EmoteStrategy.h
PlayerBots/strategy/generic/FleeStrategy.cpp
PlayerBots/strategy/generic/FleeStrategy.h
PlayerBots/strategy/generic/FollowMasterStrategy.cpp
PlayerBots/strategy/generic/FollowMasterStrategy.h
PlayerBots/strategy/generic/GrindingStrategy.cpp
PlayerBots/strategy/generic/GrindingStrategy.h
PlayerBots/strategy/generic/GuardStrategy.cpp
PlayerBots/strategy/generic/GuardStrategy.h
PlayerBots/strategy/generic/KiteStrategy.cpp
PlayerBots/strategy/generic/KiteStrategy.h
PlayerBots/strategy/generic/LootNonCombatStrategy.cpp
PlayerBots/strategy/generic/LootNonCombatStrategy.h
PlayerBots/strategy/generic/MeleeCombatStrategy.cpp
PlayerBots/strategy/generic/MeleeCombatStrategy.h
PlayerBots/strategy/generic/MoveRandomStrategy.cpp
PlayerBots/strategy/generic/MoveRandomStrategy.h
PlayerBots/strategy/generic/NonCombatStrategy.cpp
PlayerBots/strategy/generic/NonCombatStrategy.h
PlayerBots/strategy/generic/PassiveStrategy.cpp
PlayerBots/strategy/generic/PassiveStrategy.h
PlayerBots/strategy/generic/PassTroughStrategy.h
PlayerBots/strategy/generic/PullStrategy.cpp
PlayerBots/strategy/generic/PullStrategy.h
PlayerBots/strategy/generic/QuestStrategies.cpp
PlayerBots/strategy/generic/QuestStrategies.h
PlayerBots/strategy/generic/RacialsStrategy.cpp
PlayerBots/strategy/generic/RacialsStrategy.h
PlayerBots/strategy/generic/RangedCombatStrategy.cpp
PlayerBots/strategy/generic/RangedCombatStrategy.h
PlayerBots/strategy/generic/RunawayStrategy.cpp
PlayerBots/strategy/generic/RunawayStrategy.h
PlayerBots/strategy/generic/SayStrategy.cpp
PlayerBots/strategy/generic/SayStrategy.h
PlayerBots/strategy/generic/StayStrategy.cpp
PlayerBots/strategy/generic/StayStrategy.h
PlayerBots/strategy/generic/TankAoeStrategy.cpp
PlayerBots/strategy/generic/TankAoeStrategy.h
PlayerBots/strategy/generic/TankAssistStrategy.cpp
PlayerBots/strategy/generic/TankAssistStrategy.h
PlayerBots/strategy/generic/TellTargetStrategy.cpp
PlayerBots/strategy/generic/TellTargetStrategy.h
PlayerBots/strategy/generic/ThreatStrategy.cpp
PlayerBots/strategy/generic/ThreatStrategy.h
PlayerBots/strategy/generic/UseFoodStrategy.cpp
PlayerBots/strategy/generic/UseFoodStrategy.h
PlayerBots/strategy/generic/UsePotionsStrategy.cpp
PlayerBots/strategy/generic/UsePotionsStrategy.h
PlayerBots/strategy/generic/WorldPacketHandlerStrategy.cpp
PlayerBots/strategy/generic/WorldPacketHandlerStrategy.h
PlayerBots/strategy/hunter/DpsHunterStrategy.cpp
PlayerBots/strategy/hunter/DpsHunterStrategy.h
PlayerBots/strategy/hunter/GenericHunterNonCombatStrategy.cpp
PlayerBots/strategy/hunter/GenericHunterNonCombatStrategy.h
PlayerBots/strategy/hunter/GenericHunterStrategy.cpp
PlayerBots/strategy/hunter/GenericHunterStrategy.h
PlayerBots/strategy/hunter/HunterActions.cpp
PlayerBots/strategy/hunter/HunterActions.h
PlayerBots/strategy/hunter/HunterAiObjectContext.cpp
PlayerBots/strategy/hunter/HunterAiObjectContext.h
PlayerBots/strategy/hunter/HunterBuffStrategies.cpp
PlayerBots/strategy/hunter/HunterBuffStrategies.h
PlayerBots/strategy/hunter/HunterMultipliers.cpp
PlayerBots/strategy/hunter/HunterMultipliers.h
PlayerBots/strategy/hunter/HunterTriggers.cpp
PlayerBots/strategy/hunter/HunterTriggers.h
PlayerBots/strategy/mage/ArcaneMageStrategy.cpp
PlayerBots/strategy/mage/ArcaneMageStrategy.h
PlayerBots/strategy/mage/FireMageStrategy.cpp
PlayerBots/strategy/mage/FireMageStrategy.h
PlayerBots/strategy/mage/FrostMageStrategy.cpp
PlayerBots/strategy/mage/FrostMageStrategy.h
PlayerBots/strategy/mage/GenericMageNonCombatStrategy.cpp
PlayerBots/strategy/mage/GenericMageNonCombatStrategy.h
PlayerBots/strategy/mage/GenericMageStrategy.cpp
PlayerBots/strategy/mage/GenericMageStrategy.h
PlayerBots/strategy/mage/MageActions.cpp
PlayerBots/strategy/mage/MageActions.h
PlayerBots/strategy/mage/MageAiObjectContext.cpp
PlayerBots/strategy/mage/MageAiObjectContext.h
PlayerBots/strategy/mage/MageMultipliers.cpp
PlayerBots/strategy/mage/MageMultipliers.h
PlayerBots/strategy/mage/MageTriggers.cpp
PlayerBots/strategy/mage/MageTriggers.h
PlayerBots/strategy/paladin/DpsPaladinStrategy.cpp
PlayerBots/strategy/paladin/DpsPaladinStrategy.h
PlayerBots/strategy/paladin/GenericPaladinNonCombatStrategy.cpp
PlayerBots/strategy/paladin/GenericPaladinNonCombatStrategy.h
PlayerBots/strategy/paladin/GenericPaladinStrategy.cpp
PlayerBots/strategy/paladin/GenericPaladinStrategy.h
PlayerBots/strategy/paladin/GenericPaladinStrategyActionNodeFactory.h
PlayerBots/strategy/paladin/HealPaladinStrategy.cpp
PlayerBots/strategy/paladin/HealPaladinStrategy.h
PlayerBots/strategy/paladin/PaladinActions.cpp
PlayerBots/strategy/paladin/PaladinActions.h
PlayerBots/strategy/paladin/PaladinAiObjectContext.cpp
PlayerBots/strategy/paladin/PaladinAiObjectContext.h
PlayerBots/strategy/paladin/PaladinBuffStrategies.cpp
PlayerBots/strategy/paladin/PaladinBuffStrategies.h
PlayerBots/strategy/paladin/PaladinMultipliers.cpp
PlayerBots/strategy/paladin/PaladinMultipliers.h
PlayerBots/strategy/paladin/PaladinTriggers.cpp
PlayerBots/strategy/paladin/PaladinTriggers.h
PlayerBots/strategy/paladin/TankPaladinStrategy.cpp
PlayerBots/strategy/paladin/TankPaladinStrategy.h
PlayerBots/strategy/priest/GenericPriestStrategy.cpp
PlayerBots/strategy/priest/GenericPriestStrategy.h
PlayerBots/strategy/priest/GenericPriestStrategyActionNodeFactory.h
PlayerBots/strategy/priest/HealPriestStrategy.cpp
PlayerBots/strategy/priest/HealPriestStrategy.h
PlayerBots/strategy/priest/HolyPriestStrategy.cpp
PlayerBots/strategy/priest/HolyPriestStrategy.h
PlayerBots/strategy/priest/PriestActions.cpp
PlayerBots/strategy/priest/PriestActions.h
PlayerBots/strategy/priest/PriestAiObjectContext.cpp
PlayerBots/strategy/priest/PriestAiObjectContext.h
PlayerBots/strategy/priest/PriestMultipliers.cpp
PlayerBots/strategy/priest/PriestMultipliers.h
PlayerBots/strategy/priest/PriestNonCombatStrategy.cpp
PlayerBots/strategy/priest/PriestNonCombatStrategy.h
PlayerBots/strategy/priest/PriestNonCombatStrategyActionNodeFactory.h
PlayerBots/strategy/priest/PriestTriggers.cpp
PlayerBots/strategy/priest/PriestTriggers.h
PlayerBots/strategy/priest/ShadowPriestStrategy.cpp
PlayerBots/strategy/priest/ShadowPriestStrategy.h
PlayerBots/strategy/priest/ShadowPriestStrategyActionNodeFactory.h
PlayerBots/strategy/rogue/DpsRogueStrategy.cpp
PlayerBots/strategy/rogue/DpsRogueStrategy.h
PlayerBots/strategy/rogue/GenericRogueNonCombatStrategy.cpp
PlayerBots/strategy/rogue/GenericRogueNonCombatStrategy.h
PlayerBots/strategy/rogue/RogueActions.cpp
PlayerBots/strategy/rogue/RogueActions.h
PlayerBots/strategy/rogue/RogueAiObjectContext.cpp
PlayerBots/strategy/rogue/RogueAiObjectContext.h
PlayerBots/strategy/rogue/RogueComboActions.h
PlayerBots/strategy/rogue/RogueFinishingActions.h
PlayerBots/strategy/rogue/RogueMultipliers.cpp
PlayerBots/strategy/rogue/RogueMultipliers.h
PlayerBots/strategy/rogue/RogueOpeningActions.h
PlayerBots/strategy/rogue/RogueTriggers.cpp
PlayerBots/strategy/rogue/RogueTriggers.h
PlayerBots/strategy/shaman/CasterShamanStrategy.cpp
PlayerBots/strategy/shaman/CasterShamanStrategy.h
PlayerBots/strategy/shaman/GenericShamanStrategy.cpp
PlayerBots/strategy/shaman/GenericShamanStrategy.h
PlayerBots/strategy/shaman/HealShamanStrategy.cpp
PlayerBots/strategy/shaman/HealShamanStrategy.h
PlayerBots/strategy/shaman/MeleeShamanStrategy.cpp
PlayerBots/strategy/shaman/MeleeShamanStrategy.h
PlayerBots/strategy/shaman/ShamanActions.cpp
PlayerBots/strategy/shaman/ShamanActions.h
PlayerBots/strategy/shaman/ShamanAiObjectContext.cpp
PlayerBots/strategy/shaman/ShamanAiObjectContext.h
PlayerBots/strategy/shaman/ShamanMultipliers.cpp
PlayerBots/strategy/shaman/ShamanMultipliers.h
PlayerBots/strategy/shaman/ShamanNonCombatStrategy.cpp
PlayerBots/strategy/shaman/ShamanNonCombatStrategy.h
PlayerBots/strategy/shaman/ShamanTriggers.cpp
PlayerBots/strategy/shaman/ShamanTriggers.h
PlayerBots/strategy/shaman/TotemsShamanStrategy.cpp
PlayerBots/strategy/shaman/TotemsShamanStrategy.h
PlayerBots/strategy/triggers/ChatCommandTrigger.h
PlayerBots/strategy/triggers/ChatTriggerContext.h
PlayerBots/strategy/triggers/CureTriggers.cpp
PlayerBots/strategy/triggers/CureTriggers.h
PlayerBots/strategy/triggers/GenericTriggers.cpp
PlayerBots/strategy/triggers/GenericTriggers.h
PlayerBots/strategy/triggers/HealthTriggers.cpp
PlayerBots/strategy/triggers/HealthTriggers.h
PlayerBots/strategy/triggers/LfgTriggers.h
PlayerBots/strategy/triggers/LootTriggers.cpp
PlayerBots/strategy/triggers/LootTriggers.h
PlayerBots/strategy/triggers/RangeTriggers.h
PlayerBots/strategy/triggers/TriggerContext.h
PlayerBots/strategy/triggers/WithinAreaTrigger.h
PlayerBots/strategy/triggers/WorldPacketTrigger.h
PlayerBots/strategy/triggers/WorldPacketTriggerContext.h
PlayerBots/strategy/values/AlwaysLootListValue.h
PlayerBots/strategy/values/AoeHealValues.cpp
PlayerBots/strategy/values/AoeHealValues.h
PlayerBots/strategy/values/AoeValues.cpp
PlayerBots/strategy/values/AoeValues.h
PlayerBots/strategy/values/Arrow.cpp
PlayerBots/strategy/values/Arrow.h
PlayerBots/strategy/values/AttackerCountValues.cpp
PlayerBots/strategy/values/AttackerCountValues.h
PlayerBots/strategy/values/AttackersValue.cpp
PlayerBots/strategy/values/AttackersValue.h
PlayerBots/strategy/values/AttackerWithoutAuraTargetValue.cpp
PlayerBots/strategy/values/AttackerWithoutAuraTargetValue.h
PlayerBots/strategy/values/AvailableLootValue.h
PlayerBots/strategy/values/CcTargetValue.cpp
PlayerBots/strategy/values/CcTargetValue.h
PlayerBots/strategy/values/ChatValue.h
PlayerBots/strategy/values/CurrentCcTargetValue.cpp
PlayerBots/strategy/values/CurrentCcTargetValue.h
PlayerBots/strategy/values/CurrentTargetValue.cpp
PlayerBots/strategy/values/CurrentTargetValue.h
PlayerBots/strategy/values/DistanceValue.h
PlayerBots/strategy/values/DpsTargetValue.cpp
PlayerBots/strategy/values/DpsTargetValue.h
PlayerBots/strategy/values/DuelTargetValue.cpp
PlayerBots/strategy/values/DuelTargetValue.h
PlayerBots/strategy/values/EnemyHealerTargetValue.cpp
PlayerBots/strategy/values/EnemyHealerTargetValue.h
PlayerBots/strategy/values/EnemyPlayerValue.cpp
PlayerBots/strategy/values/EnemyPlayerValue.h
PlayerBots/strategy/values/Formations.cpp
PlayerBots/strategy/values/Formations.h
PlayerBots/strategy/values/GrindTargetValue.cpp
PlayerBots/strategy/values/GrindTargetValue.h
PlayerBots/strategy/values/HasAvailableLootValue.h
PlayerBots/strategy/values/HasTotemValue.h
PlayerBots/strategy/values/InvalidTargetValue.cpp
PlayerBots/strategy/values/InvalidTargetValue.h
PlayerBots/strategy/values/IsBehindValue.h
PlayerBots/strategy/values/IsFacingValue.h
PlayerBots/strategy/values/IsMovingValue.h
PlayerBots/strategy/values/IsWeaponEnhancedValue.h
PlayerBots/strategy/values/ItemCountValue.cpp
PlayerBots/strategy/values/ItemCountValue.h
PlayerBots/strategy/values/ItemForSpellValue.cpp
PlayerBots/strategy/values/ItemForSpellValue.h
PlayerBots/strategy/values/ItemUsageValue.cpp
PlayerBots/strategy/values/ItemUsageValue.h
PlayerBots/strategy/values/LastMovementValue.h
PlayerBots/strategy/values/LastSaidValue.h
PlayerBots/strategy/values/LastSpellCastTimeValue.h
PlayerBots/strategy/values/LastSpellCastValue.h
PlayerBots/strategy/values/LeastHpTargetValue.cpp
PlayerBots/strategy/values/LeastHpTargetValue.h
PlayerBots/strategy/values/LfgValues.h
PlayerBots/strategy/values/LineTargetValue.cpp
PlayerBots/strategy/values/LineTargetValue.h
PlayerBots/strategy/values/LogLevelValue.h
PlayerBots/strategy/values/LootStrategyValue.cpp
PlayerBots/strategy/values/LootStrategyValue.h
PlayerBots/strategy/values/ManaSaveLevelValue.h
PlayerBots/strategy/values/MasterTargetValue.h
PlayerBots/strategy/values/NearestAdsValue.cpp
PlayerBots/strategy/values/NearestAdsValue.h
PlayerBots/strategy/values/NearestCorpsesValue.cpp
PlayerBots/strategy/values/NearestCorpsesValue.h
PlayerBots/strategy/values/NearestFriendlyPlayersValue.cpp
PlayerBots/strategy/values/NearestFriendlyPlayersValue.h
PlayerBots/strategy/values/NearestGameObjects.cpp
PlayerBots/strategy/values/NearestGameObjects.h
PlayerBots/strategy/values/NearestGroupMemberValue.cpp
PlayerBots/strategy/values/NearestGroupMemberValue.h
PlayerBots/strategy/values/NearestNonBotPlayersValue.cpp
PlayerBots/strategy/values/NearestNonBotPlayersValue.h
PlayerBots/strategy/values/NearestNpcsValue.cpp
PlayerBots/strategy/values/NearestNpcsValue.h
PlayerBots/strategy/values/NearestUnitsValue.h
PlayerBots/strategy/values/OutfitListValue.h
PlayerBots/strategy/values/PartyMemberAfflicted.cpp
PlayerBots/strategy/values/PartyMemberAfflicted.h
PlayerBots/strategy/values/PartyMemberToDispel.cpp
PlayerBots/strategy/values/PartyMemberToDispel.h
PlayerBots/strategy/values/PartyMemberToHeal.cpp
PlayerBots/strategy/values/PartyMemberToHeal.h
PlayerBots/strategy/values/PartyMemberToResurrect.cpp
PlayerBots/strategy/values/PartyMemberToResurrect.h
PlayerBots/strategy/values/PartyMemberValue.cpp
PlayerBots/strategy/values/PartyMemberValue.h
PlayerBots/strategy/values/PartyMemberWithoutAuraValue.cpp
PlayerBots/strategy/values/PartyMemberWithoutAuraValue.h
PlayerBots/strategy/values/PetTargetValue.h
PlayerBots/strategy/values/PositionValue.cpp
PlayerBots/strategy/values/PositionValue.h
PlayerBots/strategy/values/PossibleTargetsValue.cpp
PlayerBots/strategy/values/PossibleTargetsValue.h
PlayerBots/strategy/values/RandomBotUpdateValue.h
PlayerBots/strategy/values/RtiTargetValue.h
PlayerBots/strategy/values/RtiValue.cpp
PlayerBots/strategy/values/RtiValue.h
PlayerBots/strategy/values/SelfTargetValue.h
PlayerBots/strategy/values/SpellCastUsefulValue.cpp
PlayerBots/strategy/values/SpellCastUsefulValue.h
PlayerBots/strategy/values/SpellIdValue.cpp
PlayerBots/strategy/values/SpellIdValue.h
PlayerBots/strategy/values/StatsValues.cpp
PlayerBots/strategy/values/StatsValues.h
PlayerBots/strategy/values/TankTargetValue.cpp
PlayerBots/strategy/values/TankTargetValue.h
PlayerBots/strategy/values/TargetValue.cpp
PlayerBots/strategy/values/TargetValue.h
PlayerBots/strategy/values/ThreatValues.cpp
PlayerBots/strategy/values/ThreatValues.h
PlayerBots/strategy/values/ValueContext.h
PlayerBots/strategy/values/formations/Arrow.cpp
PlayerBots/strategy/values/formations/Arrow.h
PlayerBots/strategy/warlock/DpsWarlockStrategy.cpp
PlayerBots/strategy/warlock/DpsWarlockStrategy.h
PlayerBots/strategy/warlock/GenericWarlockNonCombatStrategy.cpp
PlayerBots/strategy/warlock/GenericWarlockNonCombatStrategy.h
PlayerBots/strategy/warlock/GenericWarlockStrategy.cpp
PlayerBots/strategy/warlock/GenericWarlockStrategy.h
PlayerBots/strategy/warlock/TankWarlockStrategy.cpp
PlayerBots/strategy/warlock/TankWarlockStrategy.h
PlayerBots/strategy/warlock/WarlockActions.cpp
PlayerBots/strategy/warlock/WarlockActions.h
PlayerBots/strategy/warlock/WarlockAiObjectContext.cpp
PlayerBots/strategy/warlock/WarlockAiObjectContext.h
PlayerBots/strategy/warlock/WarlockMultipliers.cpp
PlayerBots/strategy/warlock/WarlockMultipliers.h
PlayerBots/strategy/warlock/WarlockTriggers.cpp
PlayerBots/strategy/warlock/WarlockTriggers.h
PlayerBots/strategy/warrior/DpsWarriorStrategy.cpp
PlayerBots/strategy/warrior/DpsWarriorStrategy.h
PlayerBots/strategy/warrior/GenericWarriorNonCombatStrategy.cpp
PlayerBots/strategy/warrior/GenericWarriorNonCombatStrategy.h
PlayerBots/strategy/warrior/GenericWarriorStrategy.cpp
PlayerBots/strategy/warrior/GenericWarriorStrategy.h
PlayerBots/strategy/warrior/TankWarriorStrategy.cpp
PlayerBots/strategy/warrior/TankWarriorStrategy.h
PlayerBots/strategy/warrior/WarriorActions.cpp
PlayerBots/strategy/warrior/WarriorActions.h
PlayerBots/strategy/warrior/WarriorAiObjectContext.cpp
PlayerBots/strategy/warrior/WarriorAiObjectContext.h
PlayerBots/strategy/warrior/WarriorMultipliers.cpp
PlayerBots/strategy/warrior/WarriorMultipliers.h
PlayerBots/strategy/warrior/WarriorTriggers.cpp
PlayerBots/strategy/warrior/WarriorTriggers.h
	Protocol/Opcodes.h
	Protocol/WorldSocket.h
	Protocol/WorldSocketMgr.h
	Spells/Spell.h
	Spells/SpellAuraDefines.h
	Spells/SpellAuras.h
	Spells/SpellClassMask.h
	Spells/SpellEntry.h
	Spells/SpellMgr.h
	Spells/SpellModMgr.h
	Threat/HostileRefManager.h
	Threat/ThreatManager.h
	Transports/Transport.h
	Transports/TransportMgr.h
	vmap/BIH.h
	vmap/BIHWrap.h
	vmap/DynamicTree.h
	vmap/GameObjectModel.h
	vmap/IVMapManager.h
	vmap/MapTree.h
	vmap/ModelInstance.h
	vmap/RegularGrid.h
	vmap/TileAssembler.h
	vmap/VMapDefinitions.h
	vmap/VMapFactory.h
	vmap/VMapManager2.h
	vmap/VMapTools.h
	vmap/WorldModel.h
)


if(WIN32)
  #allow exceptions in destructors
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:implicitNoexcept-")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /D__ACE_INLINE__")
endif()

# Used in game ScriptMgr
if(SCRIPTS)
  list(APPEND game_SRCS
      ${CMAKE_SOURCE_DIR}/src/scripts/ScriptLoader.cpp
      ${CMAKE_SOURCE_DIR}/src/scripts/ScriptLoader.h
  )
else()
  list(APPEND game_SRCS
      ${CMAKE_SOURCE_DIR}/src/scripts/ScriptLoader_noscripts.cpp
      ${CMAKE_SOURCE_DIR}/src/scripts/ScriptLoader.h
  )
endif()

if(USE_ANTICHEAT)
  list(APPEND game_SRCS
  )
endif()


include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/AI
  ${CMAKE_CURRENT_SOURCE_DIR}/Anticheat
  ${CMAKE_CURRENT_SOURCE_DIR}/AuctionHouse
  ${CMAKE_CURRENT_SOURCE_DIR}/AuctionHouseBot
  ${CMAKE_CURRENT_SOURCE_DIR}/AutoTesting
  ${CMAKE_CURRENT_SOURCE_DIR}/Battlegrounds
  ${CMAKE_CURRENT_SOURCE_DIR}/Chat
  ${CMAKE_CURRENT_SOURCE_DIR}/CinematicStuff
  ${CMAKE_CURRENT_SOURCE_DIR}/Commands
  ${CMAKE_CURRENT_SOURCE_DIR}/Database
  ${CMAKE_CURRENT_SOURCE_DIR}/Group
  ${CMAKE_CURRENT_SOURCE_DIR}/Guild
  ${CMAKE_CURRENT_SOURCE_DIR}/Handlers
  ${CMAKE_CURRENT_SOURCE_DIR}/Lua
  ${CMAKE_CURRENT_SOURCE_DIR}/Mail
  ${CMAKE_CURRENT_SOURCE_DIR}/MapNodes
  ${CMAKE_CURRENT_SOURCE_DIR}/MapNodes/Handlers
  ${CMAKE_CURRENT_SOURCE_DIR}/MapNodes/Serializers
  ${CMAKE_CURRENT_SOURCE_DIR}/Maps
  ${CMAKE_CURRENT_SOURCE_DIR}/Maps/Pool
  ${CMAKE_CURRENT_SOURCE_DIR}/Movement
  ${CMAKE_CURRENT_SOURCE_DIR}/Movement/spline
  ${CMAKE_CURRENT_SOURCE_DIR}/Objects
  ${CMAKE_CURRENT_SOURCE_DIR}/OutdoorPvP
  ${CMAKE_CURRENT_SOURCE_DIR}/PacketBroadcast
  ${CMAKE_CURRENT_SOURCE_DIR}/PlayerBots
  ${CMAKE_CURRENT_SOURCE_DIR}/PlayerBots/strategy
  ${CMAKE_CURRENT_SOURCE_DIR}/Protocol
  ${CMAKE_CURRENT_SOURCE_DIR}/Spells
  ${CMAKE_CURRENT_SOURCE_DIR}/Texts
  ${CMAKE_CURRENT_SOURCE_DIR}/Threat
  ${CMAKE_CURRENT_SOURCE_DIR}/Transports
  ${CMAKE_CURRENT_SOURCE_DIR}/vmap
  ${CMAKE_CURRENT_SOURCE_DIR}/Warden
  ${CMAKE_SOURCE_DIR}/src/scripts
  ${CMAKE_SOURCE_DIR}/src/scripts/PrecompiledHeaders
  ${CMAKE_SOURCE_DIR}/dep/include/g3dlite
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation/Detour
  ${CMAKE_SOURCE_DIR}/dep/recastnavigation
  ${CMAKE_SOURCE_DIR}/dep/include
  ${CMAKE_SOURCE_DIR}/dep/lualib
  ${CMAKE_SOURCE_DIR}/src/framework
  ${CMAKE_SOURCE_DIR}/src/framework/Network
  ${CMAKE_SOURCE_DIR}/src/shared
  ${CMAKE_BINARY_DIR}
  ${CMAKE_BINARY_DIR}/src/shared
  ${MYSQL_INCLUDE_DIR}
  ${TBB_INCLUDE_DIRS}
  ${ACE_INCLUDE_DIR}
)

source_group("Object"
  REGULAR_EXPRESSION .*
)

source_group("Playerbot"
  REGULAR_EXPRESSION Playerbot|Strategy|Action|Trigger|Value
)

source_group("World/Handlers"
  REGULAR_EXPRESSION Mgr|Handler|Manager|Cell|Channel|Chat|Gossip|Grid|Instance|Map|Path|Pool|Script|Skill|Transports|Update|Weather|World
)

source_group("Motion generators"
  REGULAR_EXPRESSION MoveMap|MoveMapSharedDefines|Movement|Holder|Motion|Traveller
)

source_group("Server"
  REGULAR_EXPRESSION Socket|Session|Opcodes|DBC
  FILES
    SharedDefines.h
)

source_group("Chat Commands"
  REGULAR_EXPRESSION Level[0-9]
  FILES
    debugcmds.cpp
)

source_group("Tool"
  REGULAR_EXPRESSION DatabaseCleaner|Language|PlayerDump
)

source_group("References"
  REGULAR_EXPRESSION Reference|RefManager|ThreatManager
)

source_group("Anticheat"
  REGULAR_EXPRESSION Anticheat
)

if(PCH)
  include_directories(${CMAKE_CURRENT_BINARY_DIR})
endif()

add_library(game STATIC
  ${game_SRCS}
)

target_link_libraries(game
  shared
  detour
  lualib
)

#add_dependencies(game revision.h)

# Generate precompiled header
if(PCH)
  if(MSVC OR XCODE)
    if(MSVC)
      set(game_pch "${CMAKE_CURRENT_SOURCE_DIR}/pchdef.cpp")
    endif()
    add_native_precompiled_header(game ${CMAKE_CURRENT_SOURCE_DIR}/pchdef.h)
  elseif(CMAKE_COMPILER_IS_GNUCXX)
    add_precompiled_header(game ${CMAKE_CURRENT_SOURCE_DIR}/pchdef.h)
  endif()
endif()
